Small fix for dark mode

--- a/web/src/app/page.module.css
+++ b/web/src/app/page.module.css
@@ -129,7 +129,7 @@
 }
 
 .coldOpenMessageDark {
-  color: var(--text-primary);
+  color: #040404;
 }
 
 .coldOpenMessageAccent {
